--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <ul class="footer__nav-list">
           <li class="footer__nav-menu"><a href="#" class="footer__nav-link">top</a></li>
           <li class="footer__nav-menu"><a href="#" class="footer__nav-link">カリキュラム</a></li>
-          <li class="footer__nav-menu"><a href="#" class="footer__nav-link">料金1</a></li>
+          <li class="footer__nav-menu"><a href="#" class="footer__nav-link">料金</a></li>
           <li class="footer__nav-menu"><a href="#" class="footer__nav-link">アクセス</a></li>
           <li class="footer__nav-menu"><a href="#" class="footer__nav-link">無料相談</a></li>
           <li class="footer__nav-menu"><a href="#" class="footer__nav-link">お申し込み</a></li>
