--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <span class="info__card-line"></span>
           <p class="info__card-date">2020年4月20日</p>
           <div class="info__card-box">
-            <img class="info__card-box-img" src="img/training-3207841_1920.jpg" alt="">
+            <img class="info__card-box-img" src="img/news.jpg" alt="">
             <p class="info__card-box-text">だみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキスト</p>
           </div>
         </div>
@@ -150,7 +150,7 @@
           <div class="info__card-line"></div>
           <p class="info__card-date">2020年4月20日</p>
           <div class="info__card-box">
-            <img class="info__card-box-img" src="img/training-3207841_1920.jpg" alt="">
+            <img class="info__card-box-img" src="img/news.jpg" alt="">
             <p class="info__card-box-text">だみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキスト</p>
           </div>
         </div>
@@ -158,7 +158,7 @@
           <div class="info__card-line"></div>
           <p class="info__card-date">2020年4月20日</p>
           <div class="info__card-box">
-            <img class="info__card-box-img" src="img/training-3207841_1920.jpg" alt="">
+            <img class="info__card-box-img" src="img/news.jpg" alt="">
             <p class="info__card-box-text">だみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキスト</p>
           </div>
         </div>
@@ -166,7 +166,7 @@
           <div class="info__card-line"></div>
           <p class="info__card-date">2020年4月20日</p>
           <div class="info__card-box">
-            <img class="info__card-box-img" src="img/training-3207841_1920.jpg" alt="">
+            <img class="info__card-box-img" src="img/news.jpg" alt="">
             <p class="info__card-box-text">だみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキストだみーテキスト</p>
           </div>
         </div>
