--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </p>
           <p class="about__wrapper-text sp-only">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト。</p>
         </div>
-        <div class="about__wrapper"><img src="imgabout.jpg" alt="" class="about__wrapper-img">
+        <div class="about__wrapper"><img src="img/about.jpg" alt="" class="about__wrapper-img">
           <p class="about__wrapper-title">タイトルタイトルタイトル</p>
           <p class="about__wrapper-text pc-only">
             だみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみーだみー
